<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="top"
    android:background="#ADADAD">
<ImageView
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="150sp"
    android:src="@drawable/logo"
    android:background="#ffffff"
    android:layout_marginBottom="5sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:layout_marginBottom="5sp">
                <LinearLayout
                    android:id="@+id/btn_user_info"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:background="#EAEAEA">
                    <ImageView
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginLeft="10sp"
                        android:src="@drawable/info_user"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_user_info_eng"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_user_info_kor"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:layout_marginBottom="5sp">
                <LinearLayout
                    android:id="@+id/btn_drone_info"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:background="#EAEAEA">
                    <ImageView
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginLeft="10sp"
                        android:src="@drawable/drone_info"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_drone_info_eng"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_drone_info_kor"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:layout_marginBottom="5sp">
                <LinearLayout
                    android:id="@+id/btn_drone_setting"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:background="#EAEAEA">
                    <ImageView
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginLeft="10sp"
                        android:src="@drawable/drone_setting"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_drone_setting_eng"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_drone_setting_kor"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#cccccc"
                android:layout_marginBottom="5sp">
                <LinearLayout
                    android:id="@+id/btn_drone_flying"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:background="#EAEAEA">
                    <ImageView
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_marginLeft="10sp"
                        android:src="@drawable/drone_fly"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_margin="10sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_drone_fly_eng"
                            android:textStyle="bold"
                            android:textSize="20sp" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/btn_drone_fly_kor"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/app_name"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ver"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>